--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "slideserver",
+  "name": "negotiatingsalary",
   "version": "1.0.1",
-  "description": "This package.json allows you to run a mini-server just for previewing presentations.",
+  "description": "These are the slides for my presentation for negotiating your salary.",
   "main": "gulpfile.js",
   "devDependencies": {
     "browser-sync": "^2.26.3",
